--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Студія</title>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -16,21 +17,21 @@
 <body>
   <!-- Верхня лінія -->
   <header>
+    <div class="container">
+      <nav>
+        <a href="" class="logo link"><span class="logo-text">Web</span>Studio</a>
 
-    <nav>
-      <a href="" class="logo link"><span class="logo-text">Web</span>Studio</a>
-
-      <ul class="site-nav list">
-        <li><a href="./index.html" class="link">Студія</a></li>
-        <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
-        <li><a href="" class="link">Контакти</a></li>
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link">Студія</a></li>
+          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li><a href="" class="link">Контакти</a></li>
+        </ul>
+      </nav>
+      <ul class="contacts-nav list">
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
-    </nav>
-    <ul class="contacts-nav list">
-      <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-    </ul>
-
+    </div>
 
   </header>
 
@@ -41,74 +42,84 @@
       <button type="button" class="button">Замовити послугу</button>
     </section>
     <!-- Особливості -->
-    <section class="section">
-      <h2 class="section-title visually-hidden">Особливості</h2>
-      <ul class="features list">
-        <li>
-          <h3 class="section-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-          <p class="features-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-        </li>
-        <li>
-          <h3 class="section-title">ПУНКТУАЛЬНІСТЬ</h3>
-          <p class="features-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-        </li>
-        <li>
-          <h3 class="section-title">ПЛАНУВАННЯ</h3>
-          <p class="features-text">Так само консультація з широким активом значною мірою зумовлює.</p>
-        </li>
-        <li>
-          <h3 class="section-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-          <p class="features-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-        </li>
-      </ul>
+    <section class="section description">
+      <div class="container">
+        <h2 class="section-title visually-hidden">Особливості</h2>
+        <ul class="features list">
+          <li>
+            <h3 class="section-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="features-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+          </li>
+          <li>
+            <h3 class="section-title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="features-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+          </li>
+          <li>
+            <h3 class="section-title">ПЛАНУВАННЯ</h3>
+            <p class="features-text">Так само консультація з широким активом значною мірою зумовлює.</p>
+          </li>
+          <li>
+            <h3 class="section-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="features-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+          </li>
+        </ul>
+      </div>
     </section>
     <!-- Чим ми займаємося -->
     <section class="section examples">
-      <h2 class="section-title">Чим ми займаємося</h2>
-      <ul class="list">
-        <li><img src="./images/box1.jpg" alt="Десктопні додатки" width="370" height="294"> </li>
-        <li><img src="./images/box2.jpg" alt="Мобільні додатки" width="370" height="294"> </li>
-        <li><img src="./images/box3.jpg" alt="Дизайнерські рішення" width="370" height="294"> </li>
-      </ul>
+      <div class="container">
+        <h2 class="section-title">Чим ми займаємося</h2>
+        <ul class="list">
+          <li><img src="./images/box1.jpg" alt="Десктопні додатки" width="370" height="294"> </li>
+          <li><img src="./images/box2.jpg" alt="Мобільні додатки" width="370" height="294"> </li>
+          <li><img src="./images/box3.jpg" alt="Дизайнерські рішення" width="370" height="294"> </li>
+        </ul>
+      </div>
     </section>
     <!-- Наша команда -->
     <section class="section team">
-      <h2 class="section-title">Наша команда</h2>
-      <ul class="members list">
-        <li>
-          <img src="./images/team_card_1.jpg" alt="Ігор Дем'яненко" width="270" height="260">
-          <h3 class="section-title">Ігор Дем'яненко</h3>
-          <p class="text">Product Designer</p>
-        </li>
-        <li>
-          <img src="./images/team_card_2.jpg" alt="Ольга Рєпіна" width="270" height="260">
-          <h3 class="section-title">Ольга Рєпіна</h3>
-          <p class="text">Frontend Developer</p>
-        </li>
-        <li>
-          <img src="./images/team_card_3.jpg" alt="Микола Тарасов" width="270" height="260">
-          <h3 class="section-title">Микола Тарасов</h3>
-          <p class="text">Marketing</p>
-        </li>
-        <li>
-          <img src="./images/team_card_4.jpg" alt="Михайло Єрмаков" width="270" height="260">
-          <h3 class="section-title">Михайло Єрмаков</h3>
-          <p class="text">UI Designer</p>
-        </li>
-      </ul>
+      <div class="container">
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="members list">
+          <li>
+            <img src="./images/team_card_1.jpg" alt="Ігор Дем'яненко" width="270" height="260">
+            <h3 class="section-title">Ігор Дем'яненко</h3>
+            <p class="text">Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/team_card_2.jpg" alt="Ольга Рєпіна" width="270" height="260">
+            <h3 class="section-title">Ольга Рєпіна</h3>
+            <p class="text">Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/team_card_3.jpg" alt="Микола Тарасов" width="270" height="260">
+            <h3 class="section-title">Микола Тарасов</h3>
+            <p class="text">Marketing</p>
+          </li>
+          <li>
+            <img src="./images/team_card_4.jpg" alt="Михайло Єрмаков" width="270" height="260">
+            <h3 class="section-title">Михайло Єрмаков</h3>
+            <p class="text">UI Designer</p>
+          </li>
+        </ul>
+      </div>
     </section>
   </main>
 
   <!-- Підвал -->
   <footer class="footer">
-    <a href="" class="logo link"><span class="logo-text">Web</span><span class="footer-text">Studio</span></a>
-    <address class="footer-address">
-      <p class="text">м. Київ, пр-т Лесі Українки, 26</p>
-      <ul class="footer-contacts list">
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-      </ul>
-    </address>
+    <div class="container">
+      <div class="footer-logo">
+        <a href="" class="logo link"><span class="logo-text">Web</span><span class="footer-text">Studio</span></a>
+      </div>
+      <address class="footer-address">
+        <p class="text">м. Київ, пр-т Лесі Українки, 26</p>
+        <ul class="footer-contacts list">
+          <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+          <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </div>
   </footer>
 </body>
 
