--- a/portfolio.html
+++ b/portfolio.html
@@ -17,106 +17,108 @@
 <body>
 
   <!-- Верхня лінія -->
-  <header>
+  <header class="page-header">
+    <div class="container main-nav">
+      <nav class="main-nav">
+        <a href="" class="logo link"><span class="logo-text">Web</span>Studio</a>
 
-    <nav>
-      <a href="" class="logo link"> <span class="logo-text">Web</span>Studio</a>
-
-      <ul class="site-nav list">
-        <li><a href="./index.html" class="link">Студія</a></li>
-        <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
-        <li><a href="" class="link">Контакти</a></li>
+        <ul class="site-nav list">
+          <li class="item"><a href="./index.html" class="link">Студія</a></li>
+          <li class="item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li class="item"><a href="" class="link">Контакти</a></li>
+        </ul>
+      </nav>
+      <ul class="contacts-nav list">
+        <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
-    </nav>
-    <ul class="contacts-nav list">
-      <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-    </ul>
-
+    </div>
 
   </header>
   <main>
 
 
-    <section>
+    <section class="portfolio">
+      <div class="container">
+        <h1 class="visually-hidden">Наші роботи</h1>
 
-      <h1 class="visually-hidden">Наші роботи</h1>
-
-      <ul class="filters list">
-        <li><button type="button" class="button">Усі</button> </li>
-        <li><button type="button" class="button">Веб-сайти</button> </li>
-        <li><button type="button" class="button">Додатки</button> </li>
-        <li><button type="button" class="button">Дизайн</button> </li>
-        <li><button type="button" class="button">Маркетинг</button> </li>
-      </ul>
+        <ul class="filters list">
+          <li class="item"><button type="button" class="button">Усі</button> </li>
+          <li class="item"><button type="button" class="button">Веб-сайти</button> </li>
+          <li class="item"><button type="button" class="button">Додатки</button> </li>
+          <li class="item"><button type="button" class="button">Дизайн</button> </li>
+          <li class="item"><button type="button" class="button">Маркетинг</button> </li>
+        </ul>
 
 
 
-      <ul class="work-list list">
-        <li>
-          <a href="" class="link">
-            <img src="./images/project1.jpg" alt="Технокряк" width="370" height="294">
-            <h2 class="section-title">Технокряк</h2>
-            <p class="work-text">Веб-сайт</p>
-          </a>
-        </li>
-        <li>
-          <a href="" class="link">
-            <img src="./images/project2.jpg" alt="Дизайн" width="370" height="294">
-            <h2 class="section-title">Постер New Orlean vs Golden Star</h2>
-            <p class="work-text">Дизайн</p>
-          </a>
-        </li>
-        <li>
-          <a href="" class="link">
-            <img src="./images/project3.jpg" alt="Ресторан Seafood" width="370" height="294">
-            <h2 class="section-title">Ресторан Seafood</h2>
-            <p class="work-text">Додаток</p>
-          </a>
-        </li>
-        <li>
-          <a href="" class="link">
-            <img src="./images/project4.jpg" alt="Проєкт Prime" width="370" height="294">
-            <h2 class="section-title type">Проєкт Prime</h2>
-            <p class="work-text">Маркетинг</p>
-          </a>
-        </li>
-        <li>
-          <a href="" class="link">
-            <img src="./images/project5.jpg" alt="Проєкт Boxes" width="370" height="294">
-            <h2 class="section-title type">Проєкт Boxes</h2>
-            <p class="work-text">Додаток</p>
-          </a>
-        </li>
-        <li>
-          <a href="" class="link">
-            <img src="./images/project6.jpg" alt="Inspiration has no Borders" width="370" height="294">
-            <h2 class="section-title type">Inspiration has no Borders</h2>
-            <p class="work-text">Веб-сайт</p>
-          </a>
-        </li>
-        <li>
-          <a href="" class="link">
-            <img src="./images/project7.jpg" alt="Видання Limited Edition" width="370" height="294">
-            <h2 class="section-title">Видання Limited Edition</h2>
-            <p class="work-text">Дизайн</p>
-          </a>
-        </li>
-        <li>
-          <a href="" class="link">
-            <img src="./images/project8.jpg" alt="Проєкт LAB" width="370" height="294">
-            <h2 class="section-title">Проєкт LAB</h2>
-            <p class="work-text">Дизайн</p>
-          </a>
-        </li>
-        <li>
-          <a href="" class="link">
-            <img src="./images/project9.jpg" alt="Growing Business" width="370" height="294">
-            <h2 class="section-title">Growing Business</h2>
-            <p class="work-text">Маркетинг</p>
-          </a>
-        </li>
-      </ul>
+        <ul class="work-list list">
+          <li class="item">
+            <a href="" class="link">
+              <img src="./images/project1.jpg" alt="Технокряк" width="370" height="294">
+              <h2 class="section-title">Технокряк</h2>
+              <p class="work-text">Веб-сайт</p>
+            </a>
+          </li>
+          <li class="item">
+            <a href="" class="link">
+              <img src="./images/project2.jpg" alt="Дизайн" width="370" height="294">
+              <h2 class="section-title">Постер New Orlean vs Golden Star</h2>
+              <p class="work-text">Дизайн</p>
+            </a>
+          </li>
+          <li class="item">
+            <a href="" class="link">
+              <img src="./images/project3.jpg" alt="Ресторан Seafood" width="370" height="294">
+              <h2 class="section-title">Ресторан Seafood</h2>
+              <p class="work-text">Додаток</p>
+            </a>
+          </li>
+          <li class="item">
+            <a href="" class="link">
+              <img src="./images/project4.jpg" alt="Проєкт Prime" width="370" height="294">
+              <h2 class="section-title type">Проєкт Prime</h2>
+              <p class="work-text">Маркетинг</p>
+            </a>
+          </li>
+          <li class="item">
+            <a href="" class="link">
+              <img src="./images/project5.jpg" alt="Проєкт Boxes" width="370" height="294">
+              <h2 class="section-title type">Проєкт Boxes</h2>
+              <p class="work-text">Додаток</p>
+            </a>
+          </li>
+          <li class="item">
+            <a href="" class="link">
+              <img src="./images/project6.jpg" alt="Inspiration has no Borders" width="370" height="294">
+              <h2 class="section-title type">Inspiration has no Borders</h2>
+              <p class="work-text">Веб-сайт</p>
+            </a>
+          </li>
+          <li class="item">
+            <a href="" class="link">
+              <img src="./images/project7.jpg" alt="Видання Limited Edition" width="370" height="294">
+              <h2 class="section-title">Видання Limited Edition</h2>
+              <p class="work-text">Дизайн</p>
+            </a>
+          </li>
+          <li class="item">
+            <a href="" class="link">
+              <img src="./images/project8.jpg" alt="Проєкт LAB" width="370" height="294">
+              <h2 class="section-title">Проєкт LAB</h2>
+              <p class="work-text">Дизайн</p>
+            </a>
+          </li>
+          <li class="item">
+            <a href="" class="link">
+              <img src="./images/project9.jpg" alt="Growing Business" width="370" height="294">
+              <h2 class="section-title">Growing Business</h2>
+              <p class="work-text">Маркетинг</p>
+            </a>
+          </li>
+        </ul>
+      </div>
+
     </section>
 
   </main>
@@ -124,14 +126,18 @@
 
   <!-- Підвал -->
   <footer class="footer">
-    <a href="" class="logo link"><span class="logo-text">Web</span><span class="footer-text">Studio</span></a>
-    <address class="footer-address">
-      <p class="text">м. Київ, пр-т Лесі Українки, 26</p>
-      <ul class="footer-contacts list">
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-      </ul>
-    </address>
+    <div class="container">
+      <div class="footer-logo">
+        <a href="" class="logo link"><span class="logo-text">Web</span><span class="footer-text">Studio</span></a>
+      </div>
+      <address class="footer-address">
+        <p class="text">м. Київ, пр-т Лесі Українки, 26</p>
+        <ul class="footer-contacts list">
+          <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+          <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </div>
   </footer>
 </body>
 
