--- a/portfolio.html
+++ b/portfolio.html
@@ -56,64 +56,82 @@
           <li class="item">
             <a href="" class="link">
               <img src="./images/project1.jpg" alt="Технокряк" width="370" height="294">
-              <h2 class="section-title">Технокряк</h2>
-              <p class="work-text">Веб-сайт</p>
+              <div class="work-description">
+                <h2 class="section-title">Технокряк</h2>
+                <p class="work-text">Веб-сайт</p>
+              </div>
             </a>
           </li>
           <li class="item">
             <a href="" class="link">
               <img src="./images/project2.jpg" alt="Дизайн" width="370" height="294">
-              <h2 class="section-title">Постер New Orlean vs Golden Star</h2>
-              <p class="work-text">Дизайн</p>
+              <div class="work-description">
+                <h2 class="section-title">Постер New Orlean vs Golden Star</h2>
+                <p class="work-text">Дизайн</p>
+              </div>
             </a>
           </li>
           <li class="item">
             <a href="" class="link">
               <img src="./images/project3.jpg" alt="Ресторан Seafood" width="370" height="294">
-              <h2 class="section-title">Ресторан Seafood</h2>
-              <p class="work-text">Додаток</p>
+              <div class="work-description">
+                <h2 class="section-title">Ресторан Seafood</h2>
+                <p class="work-text">Додаток</p>
+              </div>
             </a>
           </li>
           <li class="item">
             <a href="" class="link">
               <img src="./images/project4.jpg" alt="Проєкт Prime" width="370" height="294">
-              <h2 class="section-title type">Проєкт Prime</h2>
-              <p class="work-text">Маркетинг</p>
+              <div class="work-description">
+                <h2 class="section-title type">Inspiration has no Borders</h2>
+                <p class="work-text">Веб-сайт</p>
+              </div>
             </a>
           </li>
           <li class="item">
             <a href="" class="link">
               <img src="./images/project5.jpg" alt="Проєкт Boxes" width="370" height="294">
-              <h2 class="section-title type">Проєкт Boxes</h2>
-              <p class="work-text">Додаток</p>
+              <div class="work-description">
+                <h2 class="section-title type">Inspiration has no Borders</h2>
+                <p class="work-text">Веб-сайт</p>
+              </div>
             </a>
           </li>
           <li class="item">
             <a href="" class="link">
               <img src="./images/project6.jpg" alt="Inspiration has no Borders" width="370" height="294">
-              <h2 class="section-title type">Inspiration has no Borders</h2>
-              <p class="work-text">Веб-сайт</p>
+              <div class="work-description">
+                <h2 class="section-title type">Inspiration has no Borders</h2>
+                <p class="work-text">Веб-сайт</p>
+              </div>
             </a>
           </li>
           <li class="item">
             <a href="" class="link">
               <img src="./images/project7.jpg" alt="Видання Limited Edition" width="370" height="294">
-              <h2 class="section-title">Видання Limited Edition</h2>
-              <p class="work-text">Дизайн</p>
+              <div class="work-description">
+                <h2 class="section-title type">Inspiration has no Borders</h2>
+                <p class="work-text">Веб-сайт</p>
+              </div>
             </a>
           </li>
           <li class="item">
             <a href="" class="link">
               <img src="./images/project8.jpg" alt="Проєкт LAB" width="370" height="294">
-              <h2 class="section-title">Проєкт LAB</h2>
-              <p class="work-text">Дизайн</p>
+              <div class="work-description">
+                <h2 class="section-title type">Inspiration has no Borders</h2>
+                <p class="work-text">Веб-сайт</p>
+              </div>
             </a>
           </li>
           <li class="item">
             <a href="" class="link">
               <img src="./images/project9.jpg" alt="Growing Business" width="370" height="294">
-              <h2 class="section-title">Growing Business</h2>
-              <p class="work-text">Маркетинг</p>
+              <div class="work-description">
+                <h2 class="section-title type">Inspiration has no Borders</h2>
+                <p class="work-text">Веб-сайт</p>
+              </div>
             </a>
           </li>
         </ul>
